Added title and body

--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
   <head>
     <link rel="stylesheet" href="assets/reset.css" />
     <link rel="stylesheet" href="assets/style.css" />
+    <title>Tender Kid</title>
   </head>
-
-  <div class="info">
-    <div class="info__inner">
-      <div class="item">Tour</div>
-      •
-      <div class="item">Store</div>
-      •
-      <div class="item">Spotify ↗</div>
-      •
-      <div class="item">Bandcamp ↗</div>
-      •
-      <div class="item">Apple Music ↗</div>
+  <body>
+    <div class="info">
+      <div class="info__inner">
+        <div class="item">Tour</div>
+        •
+        <div class="item">Store</div>
+        •
+        <div class="item">Spotify ↗</div>
+        •
+        <div class="item">Bandcamp ↗</div>
+        •
+        <div class="item">Apple Music ↗</div>
+      </div>
     </div>
-  </div>
-  <div class="text">
-    Tenderkid loves you • Tenderkid يحبك • Tenderkid tě miluje • Tenderkid liebt
-    dich • Tenderkid Loves You • Tenderkid te ama • Tenderkid vous aime •
-    टेंडरकीड आपको प्यार करता है • Tenderkid ti ama • טנדרקיד אוהב אותך / •
-    Tenderkidはあなたを愛している • Тендеркид любит тебя • Tenderkid ťa miluje •
-    Tenderkid älskar dig • Tenderkid รักคุณ • טענדער ליבע איר • Tenderkid爱你 •
-    Tenderkid愛你
-  </div>
+    <div class="text">
+      Tenderkid loves you • Tenderkid يحبك • Tenderkid tě miluje • Tenderkid
+      liebt dich • Tenderkid Loves You • Tenderkid te ama • Tenderkid vous aime
+      • टेंडरकीड आपको प्यार करता है • Tenderkid ti ama • טנדרקיד אוהב אותך / •
+      Tenderkidはあなたを愛している • Тендеркид любит тебя • Tenderkid ťa miluje
+      • Tenderkid älskar dig • Tenderkid รักคุณ • טענדער ליבע איר •
+      Tenderkid爱你 • Tenderkid愛你
+    </div>
 
-  <!-- <div class="cursor"><div class="cursor__inner"></div></div> -->
-
-  <script src="assets/script.js"></script>
+    <script src="assets/script.js"></script>
+  </body>
 </html>
