--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         •
         <div class="item">Store</div>
         •
-        <div class="item">Spotify ↗</div>
+        <a href="https://open.spotify.com/artist/4S1xkxw66ybKlmuDQ8lcXN">
+          <div class="item">Spotify ↗</div>
+        </a>
         •
         <div class="item">Bandcamp ↗</div>
         •
