--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       Tenderkid爱你 • Tenderkid愛你
     </div>
 
-    <script src="assets/script.js"></script>
+    <script src="assets/script.min.js"></script>
   </body>
 </html>
