--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         <div class="item">Store</div>
         •
         <a href="https://open.spotify.com/artist/4S1xkxw66ybKlmuDQ8lcXN">
-          <div class="item">Spotify ↗</div>
+          <div class="item">Spotify ↗&#xFE0E;</div>
         </a>
         •
-        <div class="item">Bandcamp ↗</div>
+        <a href="https://tenderkid.bandcamp.com/">
+          <div class="item">Bandcamp ↗&#xFE0E;</div>
+        </a>
         •
-        <div class="item">Apple Music ↗</div>
+        <a href="https://music.apple.com/us/artist/tender-kid/1442002540">
+          <div class="item">Apple Music ↗&#xFE0E;</div>
+        </a>
       </div>
     </div>
     <div class="text">
